k8s/ingestion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recing-ingestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recing-ingestion
  template:
    metadata:
      labels:
        app: recing-ingestion
    spec:
      containers:
      - name: ingestion
        image: ghcr.io/elegy00/recing/ingestion:latest
        imagePullPolicy: Always
