k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recing-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recing-web
  template:
    metadata:
      labels:
        app: recing-web
    spec:
      containers:
      - name: web
        image: recing/web:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: recing-web
spec:
  selector:
    app: recing-web
  ports:
  - port: 80
    targetPort: 3000
